Fulfill assignments "Enums, Lambdas" and "Streams, Optional, Reflection"